fix sticky navbar and overflow-x: hidden issues

--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -5,6 +5,10 @@
   color: #73708F;
   font-family: 'Montserrat', sans-serif;
   background-color: #F1F1FF;
+  position: relative;
+  overflow-x: hidden;
+  overflow-y: auto;
+  padding-top: 80px;
 }
 
 p::selection, 
